[package]
name = "issue-bot"
version = "0.1.0"
authors = ["Manos Pitsidianakis <el13635@mail.ntua.gr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version="0.20.0", features=["uuid",]}
uuid = "*"
time = "*"
serde_json = "1.0.40"
serde= { version = "1.0.101", features = ["derive"]}
reqwest = "0.9.20"
toml = "0.5.3"

[dependencies.melib]
git = "https://git.meli.delivery/meli/meli"
version = "0.3.2" 
default-features = false 
features = []
