[package]
name = "issue-bot"
version = "0.2.0"
authors = ["Manos Pitsidianakis <el13635@mail.ntua.gr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version="0.20.0", features=["uuid",]}
uuid = "*"
time = "*"
serde_json = "1.0.40"
serde = { version = "1.0.101", features = ["derive"]}
reqwest = "0.9.20"
toml = "0.5.3"
log = "0.4.11"
simplelog = "^0.8.0"
error-chain = "0.12.4"

[dependencies.melib]
git = "https://git.meli.delivery/meli/meli"
version = "0.6.1"
default-features = false
features = []
