[package]
name = "issue-bot"
version = "0.3.0"
authors = ["Manos Pitsidianakis <el13635@mail.ntua.gr>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.22" }
error-chain = "0.12.4"
log = "0.4.11"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "native-tls", "json"] }
rusqlite = { version = "0.28", features = ["uuid", "chrono"] }
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.40"
simplelog = "^0.8.0"
toml = "0.5.3"
uuid = "1.1.2"

[dependencies.melib]
git = "https://git.meli.delivery/meli/meli"
version = "0.7.2"
default-features = false
features = []
